# mincepy

./: .bandit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .travis.yml  LICENSE  MIT  README.rst  black.toml  pyproject.toml  release.sh  setup.py
.github/workflows/: ci.yml
benchmarks/: data.py
docs/: Makefile  requirements.txt
docs/source/: apidoc.rst  conf.py  development.rst  index.rst  storing-objects.rst
docs/source/examples/: mapped-types.ipynb  quick-start.ipynb
mincepy/: __init__.py  _autosave.py  analysis.py  archive.py  archive_factory.py  archives.py  base_savable.py  builtins.py  common_helpers.py  comparators.py  convenience.py  db.py  db_attrs.py  defaults.py  depositor.py  depositors.py  exceptions.py  expr.py  fields.py  files.py  frontend.py  function.py  helpers.py  historian.py  historians.py  history.py  inmemory.py  migrate.py  migrations.py  mongo.py  operations.py  plugins.py  process.py  provides.py  qops.py  records.py  refs.py  result_types.py  results.py  saving.py  (+9 more)
mincepy/cli/: __init__.py  dev.py  gui.py  main.py  query.py
mincepy/gui/: __init__.py  common.py  main.py  models.py  tree_models.py  utils.py  views.py
mincepy/hist/: __init__.py  live_objects.py  metas.py  records.py  references.py  snapshots.py
mincepy/mongo/: __init__.py  aggregation.py  bulk.py  db.py  files.py  migrate.py  migrations.py  mongo_archive.py  queries.py  references.py  settings.py  types.py
notebooks/: development.ipynb
test/: common.py  conftest.py  test_archive.py  test_autosave.py  test_base_savable.py  test_benchmarks.py  test_builtins.py  test_common_helpers.py  test_convenience.py  test_data.py  test_expr.py  test_fields.py  test_fields_saving.py  test_file.py  test_find.py  test_frontend.py  test_global.py  test_helpers.py  test_historian.py  test_history.py  test_meta.py  test_migrate.py  test_migrations.py  test_mongodb.py  test_process.py  test_qops.py  test_refs.py  test_savables.py  test_snapshots.py  test_staging.py  test_transactions.py  test_type_registry.py  test_types.py  utils.py
test/archive/: test_reference_graph.py
test/cli/: test_migrate.py
test/historian/: test_archive.py  test_delete.py  test_meta.py  test_references.py  test_type_registry.py
test/mongo/: test_mongo_archive.py
